# data-engineering-zoomcamp

./: .gitignore  README.md  duckdb.db  pyproject.toml
Module 1/: README.md  main.tf  notebook.ipynb
Module 2/: README.md  compose.yaml
Module 3/: README.md  load_yellow_taxi_data.py
Module 4/: README.md
Module 4/for_hire_vehicle/fhv/: dbt_project.yml  ingest.py
Module 4/for_hire_vehicle/fhv/models/staging/: schema.yml  sources.yml  stg_fhv_tripdata.sql
Module 5/zoomcamp/pipeline/: pipeline.yml
Module 5/zoomcamp/pipeline/assets/ingestion/: trips.py
Module 6/: Homework.ipynb  README.md
Workshop 1/: README.md  taxi_pipeline.py
terraform/: main.tf  variables.tf
