[project]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
        "dbt-duckdb>=1.10.1",
        "duckdb>=1.5.0",
        "google-cloud-storage>=3.9.0",
        "notebook>=7.5.5",
        "pandas>=2.3.3",
        "psycopg2-binary>=2.9.11",
        "pyarrow>=22.0.0",
        "pyspark>=4.1.1",
        "sqlalchemy>=2.0.45",
]
